debugging-cka-pasts/ingress-svc/ping-deploy.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: hello
#   labels:
#     run: hello
# spec:
#   type: NodePort
#   ports:
#   - port: 80
#     targetPort: 80
#     protocol: TCP
#   selector:
#     run: hello
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hello
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: nginx
        ports:
        - containerPort: 80
